--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,12 @@
 }
 
 .App-logo {
+  animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
+}
+
+.App-logo-paused {
+    animation-play-state: paused;
 }
 
 .App-header {
@@ -19,4 +24,13 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
